# replicateETF

./: .gitignore  README.md  alpacaTest.py  cleanData.py  pyproject.toml  requirements.txt  scrapeETF.py  setup.cfg  test.csv  test.py
.github/workflows/: deployPackage.yaml
src/replicateETF/: __init__.py  scrapeETF.py
src/replicateETF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
