[metadata]
name = etf-builder-arshya-sharifian
version = 0.0.1
author = Arshya Ary Sharifian
author_email = arshyasharifian@gmail.com
description = A package that replicates an ETFs by buying the underlying assets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/replicateETF
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src